--- a/src/libraries/IoC.DependencyInjection.Abstractions/src/IoC.DependencyInjection.Abstractions.csproj
+++ b/src/libraries/IoC.DependencyInjection.Abstractions/src/IoC.DependencyInjection.Abstractions.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     
     <Title>Dependency Injection Abstractions</Title>
+    <Description>Description for UI display</Description>
     <PackageDescription>Abstractions for dependency injection.</PackageDescription>
    
   </PropertyGroup>
