--- a/src/libraries/IoC.DependencyInjection.Abstractions/src/IoC.DependencyInjection.Abstractions.csproj
+++ b/src/libraries/IoC.DependencyInjection.Abstractions/src/IoC.DependencyInjection.Abstractions.csproj
@@ -19,6 +19,14 @@
 
   <PropertyGroup>
     <TargetFrameworks>$(LibTargetFrameworks)</TargetFrameworks>
+    <PackageIcon>package.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\resources\package.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
