--- a/src/libraries/IoC.Net.Abstractions/tests/IoC.Net.Abstractions.Unit.Tests.csproj
+++ b/src/libraries/IoC.Net.Abstractions/tests/IoC.Net.Abstractions.Unit.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\IoC.DependencyInjection.Abstractions.csproj" />
+    <ProjectReference Include="..\src\IoC.Net.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
