--- a/src/libraries/IoC.Net.Abstractions/src/IoC.Net.Abstractions.csproj
+++ b/src/libraries/IoC.Net.Abstractions/src/IoC.Net.Abstractions.csproj
@@ -18,8 +18,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>$(LibTargetFrameworks)</TargetFrameworks>
     <PackageIcon>package.png</PackageIcon>
+    <TargetFrameworks>$(LibraryTargetFrameworks)</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
